.provarCaches/00D410000011HE0EAM/objects/rstkf__emailtemplatedata__c.object
<CustomObject>
    <description>emailTemplateData__c</description>
    <fields>
        <fullName>rstkf__emailtemplatedata_address1__c</fullName>
        <description>emailtemplatedata_address1__c</description>
        <label>Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__emailtemplatedata_address2__c</fullName>
        <description>emailtemplatedata_address2__c</description>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__emailtemplatedata_address3__c</fullName>
        <description>emailtemplatedata_address3__c</description>
        <label>Address Line 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__emailtemplatedata_amount__c</fullName>
        <description>emailtemplatedata_amount__c</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__emailtemplatedata_city__c</fullName>
        <description>emailtemplatedata_city__c</description>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__emailtemplatedata_company__c</fullName>
        <description>emailtemplatedata_company__c</description>
        <label>Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__emailtemplatedata_companylogo__c</fullName>
        <description>emailtemplatedata_companylogo__c</description>
        <label>Company Logo</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__emailtemplatedata_contact__c</fullName>
        <description>emailtemplatedata_contact__c</description>
        <label>Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__emailtemplatedata_country__c</fullName>
        <description>emailtemplatedata_country__c</description>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__emailtemplatedata_currency__c</fullName>
        <description>emailtemplatedata_currency__c</description>
        <label>Currency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__emailtemplatedata_docno__c</fullName>
        <description>emailtemplatedata_docno__c</description>
        <label>Document Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__emailtemplatedata_email__c</fullName>
        <description>emailtemplatedata_email__c</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>rstkf__emailtemplatedata_memo__c</fullName>
        <description>emailtemplatedata_memo__c</description>
        <label>Memo</label>
        <length>500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rstkf__emailtemplatedata_name__c</fullName>
        <description>emailtemplatedata_name__c</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__emailtemplatedata_paymentterms__c</fullName>
        <description>emailtemplatedata_paymentterms__c</description>
        <label>Payment Terms</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__emailtemplatedata_state__c</fullName>
        <description>emailtemplatedata_state__c</description>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__emailtemplatedata_tranid__c</fullName>
        <description>emailtemplatedata_tranid__c</description>
        <label>Transaction ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__emailtemplatedata_transdate__c</fullName>
        <description>emailtemplatedata_transdate__c</description>
        <label>Txn Date</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__emailtemplatedata_type__c</fullName>
        <description>emailtemplatedata_type__c</description>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__emailtemplatedata_zip__c</fullName>
        <description>emailtemplatedata_zip__c</description>
        <label>ZIP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Email Template Data</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Template Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>